@@ -219,6 +219,8 @@ if (@ARGV and $compat32) {
 exit 0 if (@ARGV and not @sbos);
 @sbos = uniq @sbos;
 
+get_sbo_locations(@sbos) if @sbos;
+
 # Filter out standard packages
 my $std_installs = get_inst_names(get_installed_packages('STD'));
 my %std_names;
